# pydantic_ai

./: README.md  pyproject.toml
