[project]
name = "pydantic-ai-workflow"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai (>=1.60.2,<2.0.0)",
    "fastapi (>=0.115.7,<0.116.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipython (>=8.31.0,<9.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "requests (>=2.32.3,<3.0.0)",
    "websockets (>=14.2,<15.0)",
    "aiohttp (>=3.11.11,<4.0.0)",
    "types-pillow (>=10.2.0.20240822,<11.0.0.0)",
    "types-flask (>=1.1.6,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pandas-stubs (>=2.2.3.241126,<3.0.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"
mypy = "^1.14.1"
flake8 = "^7.1.1"
pytest-cov = "^6.0.0"
pre-commit = "^4.1.0"
isort = "^6.0.0"
ruff = "^0.9.3"
pytest-asyncio = "^0.25.3"
pandas-stubs = "^2.2.3.241126"
types-requests = "^2.32.0.20241016"

[tool.ruff]
lint.ignore = ["D104"]
lint.extend-select = ["E303"]
lint.select = ["E", "F", "W"]
line-length = 100
lint.preview = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E303", "E731", "E501", "N815", "E203"]

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist

    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
)/
    '''
line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
skip = ["docs/", "build/", ".git", ".eggs", "__pycache__"]

[tool.mypy]
plugins = [
    "numpy.typing.mypy_plugin"
]
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true

